Continued to refactor NCBIReader.